--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
+    "randomstring": "^1.3.0",
+    "sharp": "^0.33.0",
     "uuid": "^9.0.1"
   }
 }
