--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.11.0",
+    "joi-errors-for-forms": "^0.2.6",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
     "randomstring": "^1.3.0",
