--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,9 @@ MYSQL_HOST=
 MYSQL_USER=
 MYSQL_PASS=
 MYSQL_DB=
-SECRET="PONER AQUI LO QUE TUS GONADAS DICTEN"
+SECRET="PONER AQUI LO QUE QUIERAS "
 EXPIRE=2H
+SMTP_HOST=smtp-relay.brevo.com
+SMTP_PORT=587
+SMTP_USER="Aqui tu email"
+SMTP_PASS=
