--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.2",
     "randomstring": "^1.3.0",
     "sharp": "^0.33.0",
