cambiamos .example y readme

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,14 @@
 MYSQL_HOST=
 MYSQL_USER=
 MYSQL_PASS=
+MYSQL_PORT=
 MYSQL_DB=
+UPLOADS_DIR=
 SECRET="PONER AQUI LO QUE QUIERAS "
 EXPIRE=2H
+PORT=
 SMTP_HOST=smtp-relay.brevo.com
 SMTP_PORT=587
 SMTP_USER="Aqui tu email"
 SMTP_PASS=
+
