--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ MYSQL_DB=
 UPLOADS_DIR=
 BASE_URL=
 SECRET="PONER AQUI LO QUE QUIERAS "
-EXPIRE=2H
+EXPIRE=2y
 PORT=
 SMTP_HOST=smtp-relay.brevo.com
 SMTP_PORT=587
